fix: Aligned nav links baseline

--- a/styles/main.css
+++ b/styles/main.css
@@ -123,6 +123,7 @@ p {
   padding: 1rem 7rem;
   display: flex;
   justify-content: space-between;
+  align-items: baseline;
   position: fixed;
   background-color: #FFFFFF;
   width: 100%;
