--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -89,6 +89,7 @@ p {
     padding: 1rem 7rem;
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
     position: fixed;
     background-color: $colour-white;
     width: 100%;
